force-app/main/default/objects/Form_Table_Element_Attribute__mdt/Form_Table_Element_Attribute__mdt.object-meta.xml
<CustomObject>
    <label>Form Table Element Attribute</label>
    <pluralLabel>Form Table Element Attributes</pluralLabel>
</CustomObject>