force-app/main/default/objects/Form_Table_Element_Attribute__mdt/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <label>Attribute Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>label</fullName>
                <default>true</default>
                <label>label</label>
            </value>
            <value>
                <fullName>fieldBinding</fullName>
            </value>
            <value>
                <fullName>isRequired</fullName>
            </value>
            <value>
                <fullName>value</fullName>
            </value>
            <value>
                <fullName>disabled</fullName>
            </value>
            <value>
                <fullName>richtext</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>