force-app/main/default/objects/Form_Table_Element_Attribute__mdt/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <label>Attribute Value</label>
    <type>TextArea</type>
</CustomField>