force-app/main/default/objects/Form_Table_Element_Attribute__mdt/fields/Display_Rank__c.field-meta.xml
<CustomField>
    <fullName>Display_Rank__c</fullName>
    <description>Because of related object in order by clause not support through SOQL so creating new field.</description>
    <inlineHelpText>Display Rank is what we have assigned to the table element, all the attribute have the same Display Rank as table element.</inlineHelpText>
    <label>Display Rank</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>