force-app/main/default/objects/Form_Table_Element_Attribute__mdt/fields/Form_Table_Element__c.field-meta.xml
<CustomField>
    <fullName>Form_Table_Element__c</fullName>
    <label>Form Table Element</label>
    <referenceTo>Form_Table_Element__mdt</referenceTo>
    <relationshipLabel>Form Table Element Attributes</relationshipLabel>
    <relationshipName>Form_Table_Element_Attributes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>